--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "live-server --port=8910 --host=localhost --open=public .",
-    "dev": "swc ./src -d dist"
+    "start": "vite",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "live-server": "^1.2.2"
-  },
   "devDependencies": {
-    "@swc/cli": "^0.1.63",
-    "@swc/core": "^1.3.102"
+    "typescript": "^5.4.3",
+    "vite": "^5.2.3"
   }
 }
